# EaseABill

./: .gitignore  NOTIFICATIONS_FEATURE.md  docker-compose.yml
backend/: README.md  constants.py  database.py  db.py  financial_helper.py  for_chart.py  main.py  ocr.py  pyproject.toml  speech.py  stats_helper.py  utils.py
backend/alembic/: env.py
backend/alembic/versions/: 14c5c45c5128_add_category_to_budgets.py  4de11b1f178f_init_tables.py  a2b3c4d5e6f7_add_budget_statuses_table.py  b3c4d5e6f7g8_add_streak_to_users.py  f1148993a40d_add_tokens_table.py
backend/backend.egg-info/: PKG-INFO  requires.txt
frontend/: CAMERA_SCANNER_IMPLEMENTATION.md  QUICK_START_CAMERA.md  README.md  RECEIPT_SCANNER_GUIDE.md  pubspec.yaml
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart  my_app.dart
frontend/lib/components/: voice_record_button.dart
frontend/lib/const/: constants.dart
frontend/lib/data/: client.dart
frontend/lib/data/model/: budget.dart  category.dart  expense.dart  ocr_result.dart  user.dart
frontend/lib/data/service/: auth_service.dart  expense_service.dart
frontend/lib/environments/: environment_singleton.dart  local_config.dart
frontend/lib/screens/: add_expense_screen.dart  budgets_screen.dart  camera_scanner_screen.dart  expenses_screen.dart  home_screen.dart  login_screen.dart  notifications_screen.dart  onboarding_screen.dart  register_screen.dart  statistics_screen.dart
frontend/macos/Flutter/: GeneratedPluginRegistrant.swift
