[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.1",
    "sqlmodel>=0.0.22",
    "dedalus_labs>=0.2.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "alembic>=1.18.3",
    "pillow>=10.0.0"
]
