[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.3",
    "dedalus_labs>=0.2.0",
    "flask>=3.1.2",
    "flask-cors>=4.0.0",
    "pillow>=10.0.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.5",
    "pillow>=10.0.0"
    "sqlmodel>=0.0.22",
]
